[package]
name = "mqtt-sql-connector"
version = "0.1.0"
edition = "2021"
default-run = "mqtt-sql-connector"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
itertools = "0.14.0"
rumqttc = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.47.1", features = ["full"] }
# need to move these to it's own specific crate
rand = "0.9.2"

